Add device test push endpoint
